Optimización de imágenes

--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -44,26 +44,86 @@
 
 /*****Background image de las páginas*****/
 
-.header-inicio {
+/* Header inicio */
+
+.notavif.notwebp .header-inicio {
     background-image: url('../assets/img/header_inicio.jpg');
 }
 
-.header-nosotros {
+.webp .header-inicio {
+    background-image: url('../assets/img/header_inicio.webp');
+}
+
+.avif .header-inicio {
+    background-image: url('../assets/img/header_inicio.avif');
+}
+
+/* Header nosotros */
+
+.notavif.notwebp .header-nosotros {
     background-image: url('../assets/img/header_nosotros.jpg');
 }
 
-.header-proceso {
+.webp .header-nosotros {
+    background-image: url('../assets/img/header_nosotros.webp');
+}
+
+.avif .header-nosotros {
+    background-image: url('../assets/img/header_nosotros.avif');
+}
+
+/* Header proceso */
+
+.notavif.notwebp .header-proceso {
     background-image: url('../assets/img/header_proceso.jpg');
 }
 
-.header-menu {
+.webp .header-proceso {
+    background-image: url('../assets/img/header_proceso.webp');
+}
+
+.avif .header-proceso {
+    background-image: url('../assets/img/header_proceso.avif');
+}
+
+/* Header menú */
+
+.notavif.notwebp .header-menu {
     background-image: url('../assets/img/header_menu.jpg');
 }
 
-.header-galeria {
+.webp .header-menu {
+    background-image: url('../assets/img/header_menu.webp');
+}
+
+.avif .header-menu {
+    background-image: url('../assets/img/header_menu.avif');
+}
+
+/* Header galería */
+
+.notavif.notwebp .header-galeria {
     background-image: url('../assets/img/header_galeria.jpg');
 }
 
-.header-contacto {
+.webp .header-galeria {
+    background-image: url('../assets/img/header_galeria.webp');
+}
+
+.avif .header-galeria {
+    background-image: url('../assets/img/header_galeria.avif');
+}
+
+/* Header contacto */
+
+.notavif.notwebp .header-contacto {
     background-image: url('../assets/img/header_contacto.jpg');
+}
+
+.webp .header-contacto {
+    background-image: url('../assets/img/header_contacto.webp');
+}
+
+.avif .header-contacto {
+    background-image: url('../assets/img/header_contacto.avif');
 }
