--- a/src/scss/internas/_contacto.scss
+++ b/src/scss/internas/_contacto.scss
@@ -4,11 +4,23 @@
 .contenido-contacto {
 
     @include m.tablet {
+
         @include m.grid(2, v.$separacion);
-        background-image: url('../assets/img/granos_cafe.jpg');
         background-repeat: no-repeat;
         background-position: right center;
         background-size: 45%;
+
+        .notavif.notwebp & {
+            background-image: url('../assets/img/granos_cafe.jpg');
+        }
+
+        .webp & {
+            background-image: url('../assets/img/granos_cafe.webp'); 
+        }
+
+        .avif & {
+            background-image: url('../assets/img/granos_cafe.avif'); 
+        }
     }
 }
 
