--- a/src/scss/internas/_menu.scss
+++ b/src/scss/internas/_menu.scss
@@ -33,6 +33,7 @@
         img {
             border: 3rem solid v.$blanco;
             box-shadow: 0px 0px 5px 3px rgb(0 0 0 / .25);
+            margin: 0 auto;
         }
     }
     
