--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -18,6 +18,12 @@
     }
 }
 
+@mixin desktopFHD {
+    @media (min-width: v.$desktopFHD) {
+        @content;
+    }
+}
+
 @mixin grid($columnas, $espaciado) {
     display: grid;
     grid-template-columns: repeat($columnas, 1fr);
