--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -7,6 +7,7 @@ $fuenteCursiva: "Bona Nova", serif;
 $telefono: 480px;
 $tablet: 768px;
 $desktop: 1024px;
+$desktopFHD: 1600px;
 
 // Colores.
 $primario: #5E311E;
