--- a/src/scss/inicio/_menu.scss
+++ b/src/scss/inicio/_menu.scss
@@ -16,6 +16,10 @@
     @include m.desktop {
         background-size: 60%, 60%, 100%;
     }
+
+    @include m.desktopFHD {
+        padding: 24rem 0 34rem 0rem;
+    }
 }
 
 .grid-menu {
